--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Web Studio Website</title>
+    <title>Main Page</title>
   </head>
   <body>
     <header>
@@ -151,11 +151,4 @@ non sodales dui. Interdum et malesuada</pre
       </div>
     </main>
 
-    <footer>
-      <h3>WebStudio</h3>
-      <address>m. Warszawa, Aleje Jerozolimskie 21</address>
-      <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-      <a href="tel:+48111111111">+48 111 111 111</a>
-    </footer>
-  </body>
-</html>
+    
