wprowadzenie CSS Variables + drobne korekty

--- a/index.html
+++ b/index.html
@@ -21,19 +21,19 @@
           >
         </div>
         <ul class="list">
-          <li><a href="agencja.html">Agencja</a></li>
-          <li><a href="portfolio.html">Portfolio</a></li>
-          <li><a href="kontakt.html">Kontakt</a></li>
+          <li><a class="agency" href="index.html">Agencja</a></li>
+          <li><a class="portfolio" href="portfolio.html">Portfolio</a></li>
+          <li><a class="contact" href="kontakt.html">Kontakt</a></li>
         </ul>
       </nav>
       <div>
-        <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-        <a href="tel:+48111111111">+48 111 111 111</a>
+        <a class="mail" href="mailto:info@devstudio.com">info@devstudio.com</a>
+        <a class="phone" href="tel:+48111111111">+48 111 111 111</a>
       </div>
     </header>
     <main>
       <div class="main">
-        <h1>
+        <h1 class="main-header">
           EFEKTYWNE ROZWIĄZANIA <br />
           DLA WASZEGO BIZNESU
         </h1>
@@ -42,28 +42,28 @@
       <div>
         <ul class="list">
           <li>
-            <h4>LOREM IPSUM</h4>
+            <h4 class="feature-header">LOREM IPSUM</h4>
             <p class="features-text">
               Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
               arcu sem. Sed non sodales dui. Interdum et malesuada
             </p>
           </li>
           <li>
-            <h4>LOREM IPSUM</h4>
+            <h4 class="feature-header">LOREM IPSUM</h4>
             <p class="features-text">
               Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
               arcu sem. Sed non sodales dui. Interdum et malesuada
             </p>
           </li>
           <li>
-            <h4>LOREM IPSUM</h4>
+            <h4 class="feature-header">LOREM IPSUM</h4>
             <p class="features-text">
               Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
               arcu sem. Sed non sodales dui. Interdum et malesuada
             </p>
           </li>
           <li>
-            <h4>LOREM IPSUM</h4>
+            <h4 class="feature-header">LOREM IPSUM</h4>
             <p class="features-text">
               Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
               arcu sem. Sed non sodales dui. Interdum et malesuada
@@ -72,7 +72,7 @@
         </ul>
       </div>
       <div>
-        <h2>Czym się zajmujemy</h2>
+        <h2 class="what-we-do-header">Czym się zajmujemy</h2>
         <ul class="list">
           <li>
             <img
@@ -102,7 +102,7 @@
       </div>
 
       <div class="team">
-        <h3>Nasz zespół</h3>
+        <h3 class="team-header">Nasz zespół</h3>
         <ul class="list">
           <li>
             <figure class="team-card">
@@ -168,8 +168,12 @@
         <a class="webstudio-link-2" href="index.html"><span>Web</span>Studio</a>
         <ul class="list">
           <li><address>m. Warszawa, Aleje Jerozolimskie 21</address></li>
-          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li><a href="tel:+48111111111">+48 111 111 111</a></li>
+          <li>
+            <a class="mail" href="mailto:info@devstudio.com"
+              >info@devstudio.com</a
+            >
+          </li>
+          <li><a class="phone" href="tel:+48111111111">+48 111 111 111</a></li>
         </ul>
       </div>
     </footer>
