--- a/portfolio.html
+++ b/portfolio.html
@@ -21,15 +21,19 @@
           >
         </div>
         <ul class="list">
-          <li><a href="agencja.html">Agencja</a></li>
-          <li><a href="portfolio.html">Portfolio</a></li>
-          <li><a href="kontakt.html">Kontakt</a></li>
+          <li><a class="agency" href="index.html">Agencja</a></li>
+          <li><a class="portfolio" href="portfolio.html">Portfolio</a></li>
+          <li><a class="contact" href="kontakt.html">Kontakt</a></li>
         </ul>
       </nav>
       <div>
         <ul class="list">
-          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li><a href="tel:+48111111111">+48 111 111 111</a></li>
+          <li>
+            <a class="mail" href="mailto:info@devstudio.com"
+              >info@devstudio.com</a
+            >
+          </li>
+          <li><a class="phone" href="tel:+48111111111">+48 111 111 111</a></li>
         </ul>
       </div>
     </header>
@@ -190,8 +194,12 @@
         <a class="webstudio-link-2" href="index.html"><span>Web</span>Studio</a>
         <ul class="list">
           <li><address>m. Warszawa, Aleje Jerozolimskie 21</address></li>
-          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li><a href="tel:+48111111111">+48 111 111 111</a></li>
+          <li>
+            <a class="mail" href="mailto:info@devstudio.com"
+              >info@devstudio.com</a
+            >
+          </li>
+          <li><a class="phone" href="tel:+48111111111">+48 111 111 111</a></li>
         </ul>
       </div>
     </footer>
